@@ -104,6 +104,9 @@ Moncelier Camille <pixdamix at users dot sourceforge dot net>
 nathanj439 <nathanj439 at users dot sourceforge dot net>
   MPD time fix
 
+Pascal Eberhard <pascal dor eberhard at gmail dot com>
+  graph and bar fix for right alignment
+
 roiban adi <adiroiban at users dot sourceforge dot net>
   hex colour patch
 
