@@ -4,20 +4,20 @@ conky(1)							      conky(1)
 
 NAME
        conky - A system monitor for X originally based on the torsmo code, but
-       more kickass. It just keeps on givener. Yeah.
+       more kickass. It just keeps on given'er. Yeah.
 
 SYNOPSIS
        conky [options]
 
 DESCRIPTION
-       Conky is a system monitor for X originally based on  the  torsmo  code.
-       Since  its original conception, Conky has changed a fair bit from its
+       Conky is a system monitor for X originally based on  the	 torsmo	 code.
+       Since  it's original conception, Conky has changed a fair bit from it's
        predecessor.  Conky can display just about  anything,  either  on  your
-       root  desktop  or in its own window.  Conky has many built-in objects,
-       as well as the ability to execute programs and  scripts,  then  display
+       root  desktop  or in it's own window.  Conky has many built-in objects,
+       as well as the ability to execute programs and  scripts,	 then  display
        the output from stdout.
 
-       We  are	always	looking  for help, and anyone interested in becoming a
+       We  are	always	looking	 for help, and anyone interested in becoming a
        developer is welcome.  Please use the facilities at SourceForge to make
        bug reports, feature requests, and submit patches.
 
@@ -25,15 +25,15 @@ DESCRIPTION
 
 COMPILING
        For  users  compiling from source, make sure you have the X development
-       libraries installed.  This should be  a	package  along	the  lines  of
+       libraries installed.  This should be  a	package	 along	the  lines  of
        "libx11-dev or xorg-x11-dev".
 
-       Gentoo  users  --  Conky  is  in Gentoos Portage... simply use "emerge
-       app-admin/conky" for installation.  There is also usually an up-to-date
-       ebuild within Conkys package or in CVS.
+       Gentoo users -- Conky is in Gentoo's Portage... simply use "emerge app-
+       admin/conky" for installation.  There is	 also  usually	an  up-to-date
+       ebuild within Conky's package or in CVS.
 
-       Debian,etc.  users  --  Conky will be in Debians repositories soon (by
-       mid-September, hopefully), and then Ubuntu  shortly  thereafter.  Until
+       Debian,etc.  users  --  Conky will be in Debian's repositories soon (by
+       mid-September, hopefully), and then Ubuntu  shortly  thereafter.	 Until
        then, "dpkg -i" the .deb package to install.
 
        To compile and run Conky with all optional components:
@@ -42,7 +42,7 @@ COMPILING
 
        ./configure	      --prefix=/usr	       --mandir=/usr/share/man
        --infodir=/usr/share/info    --datadir=/usr/share     --sysconfdir=/etc
-       --localstatedir=/var/lib   --enable-double-buffer   --enable-own-window
+       --localstatedir=/var/lib	  --enable-double-buffer   --enable-own-window
        --enable-proc-uptime --enable-mpd --enable-xft --enable-seti
 
        make
@@ -51,14 +51,14 @@ COMPILING
 
        src/conky
 
-       Conky  probably	doesnt compile with compilers other than gcc and icc.
-       It doesnt compile with C89 compiler and not even with  pure  C99.   It
-       uses  a	few things that might not exist: strdup(), strcasecmp(), strn
-       casecmp(), optarg variable with getopt() and long long  (not  in  C89).
-       Crashes in file system statistics stuff when compiled with icc, I dont
+       Conky  probably	doesn't compile with compilers other than gcc and icc.
+       It doesn't compile with C89 compiler and not even with  pure  C99.   It
+       uses  a	few things that might not exist: strdup(), strcasecmp(), strn-
+       casecmp(), optarg variable with getopt() and long long  (not  in	 C89).
+       Crashes in file system statistics stuff when compiled with icc, I don't
        know exactly why.
 
-       You can disable drawing to own window feature in case you dont  need
+       You can disable 'drawing to own window' feature in case you don't  need
        it by passing --disable-own-window to configure -script.
 
 
@@ -69,17 +69,17 @@ YOU SHOULD KNOW
        rest of Conky.
 
        If you do use them, please do not complain about memory or  CPU	usage,
-       unless you think somethings seriously wrong (mem leak, etc.).
+       unless you think something's seriously wrong (mem leak, etc.).
 
        An easy way to force Conky to reload your ~/.conkyrc: "killall -SIGUSR1
        conky".	Saves you the trouble of having to kill and then restart.
 
-       IMPORTANT: For previous Conky users, Conky 1.3 no longer  supports  the
+       IMPORTANT: For previous Conky users, Conky 1.3 no longer	 supports  the
        metar  stuff.   mdsplib	was  causing  way too many problems. Hopefully
-       therell be a better solution in Conky 2.x...
+       there'll be a better solution in Conky 2.x...
 
 OPTIONS
-       Command line options override configurations defined  in  configuration
+       Command line options override configurations defined  in	 configuration
        file.
 
        -v | -V
@@ -111,7 +111,7 @@ OPTIONS
 
 
        -t TEXT
-	      Text to render, remember single quotes, like -t  $uptime
+	      Text to render, remember single quotes, like -t ' $uptime '
 
 
        -u SECONDS
@@ -131,16 +131,16 @@ OPTIONS
 
 
 CONFIGURATION SETTINGS
-       Default	configuration  file  is  $HOME/.conkyrc  (can  be changed from
-       conky.c among other things). See  conkyrc.sample.  If  installing  from
-       Debian  package, this should be in /usr/share/doc/conky/examples ("gun
+       Default	configuration  file  is	 $HOME/.conkyrc	 (can  be changed from
+       conky.c among other things). See	 conkyrc.sample.  If  installing  from
+       Debian  package, this should be in /usr/share/doc/conky/examples ("gun-
        zip conkyrc.sample.gz" to get conkyrc.sample).
 
        You might want to copy it to $HOME/.conkyrc and	then  start  modifying
        it.  Other configs can be found at http://conky.sf.net
 
        alignment
-	      Aligned  position  on  screen,  may be top_left, top_right, bot
+	      Aligned  position	 on  screen,  may be top_left, top_right, bot-
 	      tom_left, bottom_right, or none
 
 
@@ -170,7 +170,7 @@ CONFIGURATION SETTINGS
 
 
        default_shade_color
-	      Default shading color and borders shading color
+	      Default shading color and border's shading color
 
 
        default_outline_color
@@ -178,8 +178,8 @@ CONFIGURATION SETTINGS
 
 
        double_buffer
-	      Use the Xdbe extension? (eliminates flicker) It is highly recom
-	      mended to use own window with this one so double buffer wont be
+	      Use the Xdbe extension? (eliminates flicker) It is highly recom-
+	      mended to use own window with this one so double buffer won't be
 	      so big.
 
 
@@ -268,7 +268,7 @@ CONFIGURATION SETTINGS
 
        own_window_colour colour
 	      If  own_window_transparent no, set a specified background colour
-	      (defaults to black). Takes either a hex  value  (#ffffff)  or  a
+	      (defaults to black). Takes either a hex  value  (#ffffff)	 or  a
 	      valid RGB name (see /usr/lib/X11/rgb.txt)
 
 
@@ -307,11 +307,11 @@ CONFIGURATION SETTINGS
 
 
 VARIABLES
-       Colors are parsed using XParsecolor(), there might be a list  of  them:
-       /usr/X11R6/lib/X11/rgb.txt.   Also,  http://sedition.com/perl/rgb.html.
-       Color can be also in #rrggbb format (hex).  Note that  when  displaying
-       bytes,  power  is  1024 and not 1000 so 1M really means 1024*1024 bytes
-       and not 1000*1000.
+       Colors are parsed using XParsecolor(), there might be a list  of	 them:
+       /usr/X11R6/lib/X11/rgb.txt.   Also,   http://sedition.com/perl/rgb.html
+       [http://sedition.com/perl/rgb.html].  Color can be also in #rrggbb for-
+       mat (hex).  Note that when displaying bytes, power is 1024 and not 1000
+       so 1M really means 1024*1024 bytes and not 1000*1000.
 
        addr interface
 	      IP address for an interface
@@ -358,12 +358,12 @@ VARIABLES
 
 
        apm_battery_time
-	      Display remaining APM battery life in hh:mm:ss or  "unknown"  if
+	      Display remaining APM battery life in hh:mm:ss or	 "unknown"  if
 	      AC adapterstatus is on-line or charging (FreeBSD only)
 
 
        battery (num)
-	      Remaining  capacity  in ACPI or APM battery. ACPI battery number
+	      Remaining	 capacity  in ACPI or APM battery. ACPI battery number
 	      can be given as argument (default is BAT0).
 
 
@@ -385,11 +385,11 @@ VARIABLES
 
 
        cpubar (cpu number) (height),(width)
-	      Bar that shows CPU usage, height is bars height in pixels.  See
+	      Bar that shows CPU usage, height is bar's height in pixels.  See
 	      $cpu for more info on SMP.
 
 
-       cpugraph  (cpu  number)	(height),(width) (gradient colour 1) (gradient
+       cpugraph	 (cpu  number)	(height),(width) (gradient colour 1) (gradient
        colour 2)
 	      CPU  usage graph, with optional colours in hex, minus the #. See
 	      $cpu for more info on SMP.
@@ -398,7 +398,7 @@ VARIABLES
        diskio Displays current disk IO.
 
 
-       diskiograph (height),(width) (gradient colour 1)  (gradient  colour  2)
+       diskiograph (height),(width) (gradient colour 1)	 (gradient  colour  2)
        (scale)
 	      Disk IO graph, colours defined in hex, minus the #. If scale  is
 	      non-zero, it becomes the scale for the graph.
@@ -412,7 +412,7 @@ VARIABLES
 	      Download speed in kilobytes with one decimal
 
 
-       downspeedgraph  net  (height),(width)  (gradient  colour  1)  (gradient
+       downspeedgraph  net  (height),(width)  (gradient	 colour	 1)  (gradient
        colour 2) (scale)
 	      Download	speed  graph,  colours defined in hex, minus the #. If
 	      scale is non-zero, it becomes the scale for the graph.
@@ -422,13 +422,13 @@ VARIABLES
 
 
        exec command
-	      Executes a shell command and displays the output in conky. warn
-	      ing:  this  takes a lot more resources than other variables. Id
+	      Executes a shell command and displays the output in conky. warn-
+	      ing:  this  takes a lot more resources than other variables. I'd
 	      recommend coding wanted behaviour in C and posting a patch.
 
 
        execbar command
-	      Same as exec, except if  the  first  value  return  is  a  value
+	      Same as exec, except if  the  first  value  return  is  a	 value
 	      between  0-100,  it will use that number for a bar. The size for
 	      the bar is currently fixed, but that may change in the future.
 
@@ -438,7 +438,7 @@ VARIABLES
 
 
        execi interval command
-	      Same as exec but with specific interval. Interval cant be  less
+	      Same as exec but with specific interval. Interval can't be  less
 	      than update_interval in configuration. See also $texeci
 
 
@@ -473,7 +473,7 @@ VARIABLES
 
 
        fs_bar (height),(width) fs
-	      Bar  that  shows how much space is used on a file system. height
+	      Bar  that	 shows how much space is used on a file system. height
 	      is the height in pixels. fs is any file on that file system.
 
 
@@ -495,7 +495,7 @@ VARIABLES
 
        head logfile lines (interval)
 	      Displays first N lines of supplied text text file.  If  interval
-	      is  not  supplied,  Conky assumes 2x Conkys interval. Max of 30
+	      is  not  supplied,  Conky assumes 2x Conky's interval. Max of 30
 	      lines can be displayed, or until the text buffer is filled.
 
 
@@ -540,21 +540,21 @@ VARIABLES
 
        i8k_left_fan_rpm
 	      If  running the i8k kernel driver for Inspiron laptops, displays
-	      the left fans rate of rotation, in revolutions  per  minute  as
+	      the left fan's rate of rotation, in revolutions  per  minute  as
 	      listed in /proc/i8k. Beware, some laptops i8k reports these fans
 	      in reverse order.
 
 
        i8k_left_fan_status
 	      If running the i8k kernel driver for Inspiron laptops,  displays
-	      the  left  fan  status  as  listed  in  /proc/i8k (translated to
-	      human-readable). Beware, some laptops i8k reports these fans  in
+	      the left fan status as listed in /proc/i8k (translated to human-
+	      readable). Beware,  some	laptops	 i8k  reports  these  fans  in
 	      reverse order.
 
 
        i8k_right_fan_rpm
 	      If  running the i8k kernel driver for Inspiron laptops, displays
-	      the right fans rate of rotation, in revolutions per  minute  as
+	      the right fan's rate of rotation, in revolutions per  minute  as
 	      listed in /proc/i8k. Beware, some laptops i8k reports these fans
 	      in reverse order.
 
@@ -577,7 +577,7 @@ VARIABLES
 
 
        if_running (process)
-	      if  PROCESS  is  running,  display everything if_running and the
+	      if  PROCESS  is  running,	 display everything if_running and the
 	      matching $endif
 
 
@@ -675,7 +675,7 @@ VARIABLES
 
 
        mpd_bar (height),(width)
-	      Bar of mpds progress
+	      Bar of mpd's progress
 
 
        mpd_bitrate
@@ -691,19 +691,19 @@ VARIABLES
 
 
        mpd_vol
-	      MPDs volume
+	      MPD's volume
 
 
        mpd_elapsed
-	      Songs elapsed time
+	      Song's elapsed time
 
 
        mpd_length
-	      Songs length
+	      Song's length
 
 
        mpd_percent
-	      Percent of songs progress
+	      Percent of song's progress
 
 
        new_mails
@@ -759,9 +759,9 @@ VARIABLES
 
 
        texeci interval command
-	      Runs a command at an interval inside a thread and  displays  the
-	      output.  Same  as  $execi,  except  the  command is run inside a
-	      thread. Use this if you have a slow script to keep Conky	updat
+	      Runs a command at an interval inside a thread and	 displays  the
+	      output.  Same  as	 $execi,  except  the  command is run inside a
+	      thread. Use this if you have a slow script to keep Conky	updat-
 	      ing.  You should make the interval slightly longer then the time
 	      it takes your script to execute. For  example,  if  you  have  a
 	      script  that  take  5  seconds  to  execute, you should make the
@@ -774,26 +774,26 @@ VARIABLES
 
        tail logfile lines (interval)
 	      Displays last N lines of supplied text text file. If interval is
-	      not supplied, Conky assumes 2x Conkys interval. Max of 30 lines
+	      not supplied, Conky assumes 2x Conky's interval. Max of 30 lines
 	      can be displayed, or until the text buffer is filled.
 
 
        time (format)
-	      Local time, see man strftime to get more information about  for
+	      Local time, see man strftime to get more information about  for-
 	      mat
 
 
        totaldown net
 	      Total  download, overflows at 4 GB on Linux with 32-bit arch and
-	      there doesnt seem to be a way to know how  many  times  it  has
+	      there doesn't seem to be a way to know how  many	times  it  has
 	      already done that before conky has started.
 
 
        top type, num
 	      This  takes arguments in the form:top (name) (number) Basically,
 	      processes are ranked from highest to  lowest  in	terms  of  cpu
-	      usage,  which  is  what (num) represents. The types are: "name",
-	      "pid", "cpu", and mem". There can  be  a	max  of  10  processes
+	      usage,  which  is	 what (num) represents. The types are: "name",
+	      "pid", "cpu", and mem". There can	 be  a	max  of	 10  processes
 	      listed.
 
 
@@ -843,12 +843,12 @@ VARIABLES
 
 
        voffset (pixels)
-	      Change verticle offset by N pixels. Negative values  will  cause
+	      Change verticle offset by N pixels. Negative values  will	 cause
 	      text to overlap. See also $offset.
 
 
 EXAMPLES
-       conky -t${time %D %H:%m}-o -u 30
+       conky -t '${time %D %H:%m}' -o -u 30
 	      Start Conky in its own window with date and clock as text and 30
 	      sec update interval.
 
@@ -859,24 +859,25 @@ FILES
        ~/.conkyrc default configuration file
 
 BUGS
-       Drawing to root or some other desktop window directly doesnt work with
-       all window managers. Especially doesnt work well with Gnome and it has
-       been reported that it doesnt work with KDE  either.  Nautilus  can  be
-       disabled  from  drawing	to  desktop with program gconf-editor. Uncheck
+       Drawing to root or some other desktop window directly doesn't work with
+       all window managers. Especially doesn't work well with Gnome and it has
+       been reported that it doesn't work with KDE  either.  Nautilus  can  be
+       disabled	 from  drawing	to  desktop with program gconf-editor. Uncheck
        show_desktop in /apps/nautilus/preferences/.  There  is	-w  switch  in
        Conky  to  set  some  specific window id. You might find xwininfo -tree
        useful to find the window to draw to. You  can  also  use  -o  argument
        which makes Conky to create its own window.
 
 SEE ALSO
-       http://conky.sourceforge.net
+       http://conky.sourceforge.net [http://conky.sourceforge.net]
 
-       http://www.sourceforge.net/projects/conky
+       http://www.sourceforge.net/projects/conky	   [http://www.source-
+       forge.net/projects/conky]
 
        #conky on irc.freenode.net
 
 AUTHORS
-       The Conky dev team. Whats up now!
+       The Conky dev team. What's up now!
 
 
 
